# freyr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
freyr/src/assets/: button_style.rs  mod.rs
src/: accordion.rs  basic_button.rs  card.rs  carousel.rs  carousel_simple.rs  carousel_with_timer.rs  dialog.rs  dropdown.rs  lib.rs  nav_bar.rs  navbar_with_logo.rs  output.css  prelude.rs  spinner.rs  tabs.rs
src/assets/: accordion_styles.rs  button_style.rs  card_styles.rs  carousel_simple_styles.rs  dialog_styles.rs  dropdown_styles.rs  mod.rs  navbar_dropdown_styles.rs  navbar_style.rs  spinner_styles.rs  tabs_styles.rs
src/enums/: accordion_enums.rs  basic_button_enums.rs  carousel_simple_enums.rs  dialog_enums.rs  dropdown_enums.rs  mod.rs  navbar_enums.rs  spinner_enums.rs  tabs_enums.rs
src/scripts/: carousel_script.rs  mod.rs
