[package]
name = "freyr"
authors = ["Cyprien"]
version = "0.2.3"
edition = "2021"
description = "A UI component library for Dioxus web."
license = "MIT"
documentation = "https://docs.rs/freyr/latest/freyr/"
repository = "https://github.com/cbdefontenay/freyr"
homepage = "https://freyr-doc.onrender.com/"

[dependencies]
dioxus = { version = "0.7.0-rc.0", features = ["web", "router"] }
serde_json = "1.0.140"

[features]
default = ["web"]
web = ["dioxus/web"]